grid-gap popup.js fix

--- a/src/scss/base/common.scss
+++ b/src/scss/base/common.scss
@@ -183,8 +183,7 @@ section{
 .tel-block {
 	// .tel-block__list
 	&__list {
-		display: flex;
-		flex-wrap: nowrap;
+		display: grid;
 	}
 	// .tel-block__list-item
 	&__list-item {
