--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -255,14 +255,14 @@
 .steps {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(rem(260), 1fr));
-	gap: rem(30);
+	grid-gap: rem(30);
 	counter-reset: steps;
 	&:not(:last-child) {
 		@include adaptiveValue("margin-bottom",150, 50, 1200, 320, 1 );
 	}
 	@media (max-width:$mobileSmall){
 		grid-template-columns: repeat(auto-fit, minmax(rem(190), 1fr));
-		gap: rem(20); 
+		grid-gap: rem(20); 
 	}
 		&__item.aos-animate {
 			&:first-child{
@@ -403,7 +403,7 @@
 .specialties {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(rem(300), 1fr));
-	gap: rem(5);
+	grid-gap: rem(5);
 	overflow: hidden;
 	cursor: default;
 	margin: rem(0) rem(-5);
@@ -479,7 +479,7 @@
 	&__content {
 		display: flex;
 		flex: 1 0 100%;
-		@include adaptiveValue("gap", 50 , 30, 1200, 320, 1);
+		@include adaptiveValue("grid-gap", 50 , 30, 1200, 320, 1);
 		flex-wrap: wrap;
 		&:not(:last-child) {
 			@include adaptiveValue("margin-left", 50, 30, 1200, 577, 1 );
@@ -597,8 +597,10 @@
 	&_consult {
 			// .tel-block__list
 		& .tel-block__list {
+			//max-width: rem(120);
+			grid-template-columns: repeat(4, 50px);
 			justify-content: center;
-			@include adaptiveValue("gap", 30, 15, 1200, 320, 1);
+			@include adaptiveValue("grid-gap", 30, 15, 1200, 320, 1);
 			&:not(:last-child) {
 				@include adaptiveValue("margin-left", 30, 15, 1200, 320, 1 );
 				margin-bottom: rem(20);
@@ -754,7 +756,7 @@
 .counters {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(rem(260), 1fr));
-	gap: rem(30);
+	grid-gap: rem(30);
 	// .counters__item
 	&__item {
 		display: flex;
@@ -879,14 +881,14 @@
 		align-items: center;
 		justify-content: center;
 		flex-wrap: wrap;
-		@include adaptiveValue("gap", 50, 10, 1200, 577, 1 );
+		@include adaptiveValue("grid-gap", 50, 10, 1200, 577, 1 );
 		&:not(:last-child) {
 			@include adaptiveValue("margin-left", 50, 10, 1200, 577, 1 );
 			@include adaptiveValue("bottom", 50, 10, 1200, 577, 1 );
 		}
 		@media (max-width:$mobileSmall){
 			justify-content: space-around;
-			row-gap: rem(50);
+			grid-row-gap: rem(50);
 			&:not(:last-child) {
 				margin-left: rem(50);
 			}
